<?xml version="1.0" encoding="utf-8"?>
<!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.geekband.yanjinyi1987.wechat_layout_sim_yanjinyi1987.HomeworkActivity"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/wechat_background2">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:orientation="vertical"
        android:background="@color/wechat_background1"
        android:gravity="center">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:src="@mipmap/wechat_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wechat_textcolor1"
                android:textSize="17sp"
                android:text="@string/wechat_version"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/list_divider"
            android:dividerHeight="@dimen/wechat_listview_divider_height"
            android:id="@+id/wechat_list">
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/wechat_background1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wechat_textcolor2"
                android:textSize="@dimen/wechat_textSize_blue"
                android:text="@string/wechat_private"
                android:id="@+id/wechat_private_id"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="-3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wechat_textcolor1"
                android:text="@string/wechat_tencent"
                android:textSize="@dimen/wechat_textSize_gray"
                android:id="@+id/wechat_tencent_id"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="-3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wechat_textcolor1"
                android:textSize="@dimen/wechat_textSize_gray"
                android:text="@string/wechat_copyright"
                android:id="@+id/wechat_copyright_id" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/wechat_textcolor1"
                android:textSize="@dimen/wechat_textSize_gray"
                android:text="@string/wechat_rights"
                android:id="@+id/wechat_rights_id" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
